fix(subplebbit): state string should wrap next to sidebar

--- a/src/views/home/home.module.css
+++ b/src/views/home/home.module.css
@@ -4,11 +4,16 @@
 
 .stateString {
   text-transform: lowercase;
-  max-width: calc(100% - 305px);
 }
 
 @media (max-width: 768px) {
   .sidebar {
     display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .stateString {
+    max-width: calc(100% - 305px);
   }
 }
