--- a/src/views/subplebbit/subplebbit.module.css
+++ b/src/views/subplebbit/subplebbit.module.css
@@ -6,8 +6,19 @@ div[data-viewport-type="window"] {
   position: relative !important;
 }
 
+.stateString {
+  text-transform: lowercase;
+}
+
+
 @media (max-width: 768px) {
   .sidebar {
     display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  .stateString {
+    max-width: calc(100% - 305px);
   }
 }
